Fix empty white space at bottom of Explore page viewport

--- a/hub/static/css/_explore.scss
+++ b/hub/static/css/_explore.scss
@@ -54,8 +54,12 @@ $osm-sea-blue: rgb(168, 212, 243);
 }
 
 @include media-breakpoint-up(md) {
+    .page-explore .navbar {
+        height: 95px;
+    }
+
     .explore {
-        height: calc( 100vh - 100px );
+        height: calc( 100vh - 95px );
         display: flex;
     }
 
